[gd_scene load_steps=3 format=3 uid="uid://prterke35hgb"]

[ext_resource type="Script" uid="uid://cgyilf3bvf1pv" path="res://addons/dc_plugin/add_mastery_popup.gd" id="1_jktqe"]
[ext_resource type="PackedScene" uid="uid://c4ooeq4f4j6ec" path="res://addons/dc_plugin/data_win_config_popup.tscn" id="2_m67ok"]

[node name="AddMastery" type="PopupPanel"]
oversampling_override = 1.0
title = "Add Mastery..."
position = Vector2i(0, 36)
size = Vector2i(225, 497)
visible = true
unresizable = false
borderless = false
popup_wm_hint = false
script = ExtResource("1_jktqe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 221.0
offset_bottom = 493.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 446)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="NameEditTimer" type="Timer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/NameEdit"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="DisableTranslationStringsButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Disable Translation Strings"

[node name="DescriptionContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/DescriptionContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/DescriptionContainer/HBoxContainer"]
layout_mode = 2
text = "Description"

[node name="EnableTranslationStringsButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/DescriptionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Enable Translation Strings"

[node name="DescriptionEditsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/DescriptionContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UnlockTextContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/UnlockTextContainer"]
layout_mode = 2
text = "Unlock Text"

[node name="UnlockTextEditsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/UnlockTextContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EnableDataWinButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Use Icons From data.win"

[node name="DataWinIconsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/DataWinIconsContainer"]
layout_mode = 2

[node name="DataWinEnabledCheckBox" type="CheckBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/DataWinIconsContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Use Icons From data.win:"

[node name="LocateButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/DataWinIconsContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Locate Export..."

[node name="DataWinIconRectsContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/DataWinIconsContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Levels"

[node name="LevelsEdit" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
value = 3.0
allow_greater = true
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Charges"

[node name="ChargesEdit" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
allow_greater = true
select_all_on_focus = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Cost"

[node name="CostEditsContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="RegistryCheckBox" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
button_pressed = true
text = "Add To Registry"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Cancel"

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Create"

[node name="DataWinConfigPopup" parent="." instance=ExtResource("2_m67ok")]
unique_name_in_owner = true
position = Vector2i(512, 0)
visible = false

[connection signal="text_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="timeout" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/NameEdit/NameEditTimer" to="." method="_on_name_edit_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/DisableTranslationStringsButton" to="." method="_on_disable_translation_strings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/DescriptionContainer/HBoxContainer/EnableTranslationStringsButton" to="." method="_on_enable_translation_strings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/EnableDataWinButton" to="." method="_on_enable_data_win_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/DataWinIconsContainer/HBoxContainer2/LocateButton" to="." method="_on_locate_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/LevelsEdit" to="." method="_on_levels_edit_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="canceled" from="DataWinConfigPopup" to="." method="_on_data_win_config_popup_canceled"]
[connection signal="dir_selected" from="DataWinConfigPopup" to="." method="_on_data_win_config_popup_dir_selected"]
